--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,20 +24,19 @@ jobs:
 
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "./vertica_python.egg-info/requires.txt" }}
+            - v1-dependencies-{{ checksum "./.circleci/requires.txt" }}
 
       - run:
           name: "Create venv and install dependencies"
           command: |
             python -m venv _venv
             source ./_venv/bin/activate
-            pip install -r ./vertica_python.egg-info/requires.txt
-            pip install nose==1.3.6 python-dateutil
+            pip install -r ./.circleci/requires.txt
 
       - save_cache:
           paths:
             - ./_venv
-          key: v1-dependencies-{{ checksum "./vertica_python.egg-info/requires.txt" }}
+          key: v1-dependencies-{{ checksum "./.circleci/requires.txt" }}
 
       - run:
           name: "Run unit tests (nose)"
