--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,6 @@ lib64
 # Installer logs
 pip-log.txt
 
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
 # Translations
 *.mo
 
@@ -49,6 +44,9 @@ nosetests.xml
 /env/
 _venv
 _test_results
+.coverage
+.tox
+vp_test_log/
 
 # pyenv
 .python-version
